<resources>
    <string name="app_name">KOMBI</string>
    <string name="Password" />
    <string name="Log_in">Log in</string>
    <string name="Sumit_login">Submit</string>
    <string name="openMessage">REDUCING CARBON</string>
    <string name="SubmitRegistration">Submit</string>
    <string name="Name">Name</string>
    <string name="Student_Number">Student Number</string>
    <string name="University">University</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Email">Email</string>
    <string name="Dob">Dob</string>
    <string name="HomePostcode">Home Postcode</string>
    <string name="Address_Line">Address Line</string>
    <string name="Register">Register</string>
    <string name="Change_password">Forgot</string>
    <string name="passwordtxt">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PlantTreeTXT">Plant a TREE FOR C$</string>
    <string name="treeForFutureBio">Trees for the Future (TREES) trains communities on sustainable land use so that they can grow vibrant economies, thriving food systems, and a healthier planet</string>
    <string name="plantTree">Plant TREE FOR C$50</string>
    <string name="donateText">Donate C$10</string>
    <string name="donate">donate C$10</string>
    <string name="Driver">Are you a driver?</string>
    <string name="VerifyDriversLicence">Verify drivers licence</string>
    <string name="register">register</string>
    <string name="makerequest">Make a Request</string>
    <string name="select">Select Destination</string>
    <string name="selectseats">Select seats</string>
    <string name="selectdayui">Select Day</string>
    <string name="selectday">Select day</string>
    <string name="GO">GO</string>
    <string name="Rideshare">Kombi scheduled</string>
    />
</resources>